# listic

./: .gitignore  README.md  docker-compose.yml  windsurf_plan.yaml
backend/: .env.example  Dockerfile  manage.py  pyproject.toml
backend/docker/: Dockerfile
backend/docker/postgres/initdb/: init-app-db.sh
backend/listic/: asgi.py  settings.py  urls.py  wsgi.py
backend/listic/core/: apps.py  models.py  views.py
nginx/: nginx.conf
